k8s-template/tinkerpop-graphdb-schema-loader.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tinkerpop-graphdb-schema-loader
spec:
  replicas: ${GRAPHDB_PERSONA_SCHEMA_LOADER_K8S_REPLICAS}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: ${GRAPHDB_PERSONA_SCHEMA_LOADER_K8S_REPLICAS_MAX_UNAVAILABLE}
      maxSurge: ${GRAPHDB_PERSONA_SCHEMA_LOADER_K8S_REPLICAS}
  template:
    metadata:
      labels:
        name: tinkerpop-graphdb-schema-loader
    spec:
      containers:
        - name: tinkerpop-graphdb-schema-loader
          image: ${GRAPHDB_PERSONA_SCHEMA_LOADER_K8S_IMAGE}
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /opt/graphdb/conf
              name: config
              readOnly: true
          resources:
            requests:
              cpu: ${GRAPHDB_PERSONA_SCHEMA_LOADER_K8S_REQUESTS_CPU}
              memory: ${GRAPHDB_PERSONA_SCHEMA_LOADER_K8S_REQUESTS_MEMORY}
            limits:
              cpu: ${GRAPHDB_PERSONA_SCHEMA_LOADER_K8S_LIMITS_CPU}
              memory: ${GRAPHDB_PERSONA_SCHEMA_LOADER_K8S_LIMITS_MEMORY}
          readinessProbe:
            httpGet:
              path: /healthcheck/readiness
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /healthcheck/liveliness
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 30
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: tinkerpop-graphdb-schema-loader



---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: tinkerpop-graphdb-schema-loader
    role: service
  name: tinkerpop-graphdb-schema-loader
spec:
  ports:
    - name: http
      protocol: TCP
      targetPort: ${GRAPHDB_PERSONA_SCHEMA_LOADER_PORT}
      port: ${GRAPHDB_PERSONA_SCHEMA_LOADER_PORT}
  selector:
    name: tinkerpop-graphdb-schema-loader
  sessionAffinity: None
